<resources>
    <string name="app_name">GADS Leaderboard</string>
    <string name="leaderboard">Leaderboard</string>

    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="are_you_sure_prompt">Are you sure?</string>
    <string name="submit">Submit</string>

    <string name="yes">Yes</string>

    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>

    <string name="project_submission">Project Submission</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
</resources>